--- a/prob2_2025/cjoint.html
+++ b/prob2_2025/cjoint.html
@@ -1394,7 +1394,7 @@ Let $(X,Y)$  be uniformly distributed over $S=\{(x,y)~:~0\leq x\leq 1,~x\geq y\g
 <p>
 <b>EXERCISE 42:</b>&nbsp;
 Find $E(X^2Y)$  when $(X,Y)$  has joint density 
-$$f(x,y) = \left\{\begin{array}{ll}x+y&\text{if }0&lt; x &lt; 1\\ 0&\text{otherwise.}\end{array}\right.$$
+$$f(x,y) = \left\{\begin{array}{ll}x+y&\text{if }0&lt; x,y &lt; 1\\ 0&\text{otherwise.}\end{array}\right.$$
 </p>
 
 <p></p>
