--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -685,6 +685,10 @@ Express you answer in terms CDF of some standard distribution.
 
 <p>
 <b>EXERCISE 18:</b>&nbsp;<font size="-2">[rossipmnorm2.png]</font><img width="" src="image/rossipmnorm2.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 19:</b>&nbsp;<font size="-2">[hpstrans19.png]</font><img width="" src="image/hpstrans19.png" style="vertical-align:text-top;"></p>
+
+<p></p>
 <hr/>
 <table width="100%" border="0">
 <tr>
