--- a/prob2_2025/cdistrib1.html
+++ b/prob2_2025/cdistrib1.html
@@ -211,6 +211,8 @@ Last semester, we had learned some standard discrete distributions like binomial
 
 <h1><a
 name="$Unif(a,b)$">$Unif(a,b)$</a></h1>
+<a href="https://youtu.be/AFBXben1hRE">Video for this section</a>
+<p></p>
 This distribution captures the idea of a random variable that take any value in $(a,b)$  with equal probability. It
  has PDF $f(x) =\left\{\begin{array}{ll}\frac{1}{b-a}&\text{if }a &lt; x &lt; b\\ 0&\text{otherwise.}\end{array}\right. $
 Notice that a PDF must be defined over entire ${\mathbb R}.$  Hence we need the "else" clause. Also $a&lt; x &lt; b$  could be
@@ -312,6 +314,8 @@ Plot $f_\theta(1)$  as a function of $\theta.$</p>
 
 <h1><a
 name="Any continuous distribution to $Unif(0,1)$">Any continuous distribution to $Unif(0,1)$</a></h1>
+<a href="https://youtu.be/JKZDQ_xFhH4">Video for this section</a>
+<p></p>
 In this and the following sections we shall present two surprising properties of the $Unif(0,1)$  distribution. The
  first property says that you can turn any continuous random variable into a
  $Unif(0,1)$  random variable!
@@ -384,6 +388,8 @@ name="Problem set 2">Problem set 2</a></h2>
 
 <h1><a
 name="$Unif(0,1)$ to any distribution">$Unif(0,1)$ to any distribution</a></h1>
+<a href="https://youtu.be/u3jd8k-WJjw">Video for this section</a>
+<p></p>
 Of a great importance is the special case $Unif(0,1).$  It plays a crucial role in the proof of the fundamentanl theorem
  of probability as well as random number generation using a computer.
 <p></p>
