--- a/prob2_2025/trans.html
+++ b/prob2_2025/trans.html
@@ -1008,7 +1008,10 @@ name="Problem set 10">Problem set 10</a></h2>
 
 <h1><a
 name="Characteristic function (CF)">Characteristic function (CF)</a></h1>
-<a href="https://youtu.be/Hb_7jyd_GAI">Video for this section</a>
+<a href="https://youtu.be/VwmX-rmTLUw">Video for this section</a>
+<p></p>
+
+<img src="image/alert.png">(The video has been corrected.)
 <p></p>
 We have seen various functions connected with a distribution, PMF, PDF, CDF and MGF. In case,
  you have forgotten about  the
