--- a/prob2_2025/cjoint.html
+++ b/prob2_2025/cjoint.html
@@ -467,7 +467,7 @@ concept of joint probability density, as well.
 <legend><b>Definition: </b></legend>
 Let $X,Y$  be jointly distributed random variables. We say that they have <b><font color="red" size="40">joint probability density</font></b>  
 $f:{\mathbb R}^2\rightarrow[0,\infty)$ if
-$$\forall a \leq b, c \leq d~~P\big( (X,Y)\in[a,b]\times[c,d] \big) = \int_a^b \int_c^d f(x,y)\, dxdy.$$
+$$\forall a \leq b, c \leq d~~P\big( (X,Y)\in[a,b]\times[c,d] \big) = \int_a^b \int_c^d f(x,y)\, dydx.$$
 </fieldset>
 If you are new to this "integral inside integral" notation, it is called an <b><font color="red" size="40">iterated integral</font></b>. 
 <p></p>
