--- a/prob2_2025/measure.html
+++ b/prob2_2025/measure.html
@@ -197,28 +197,37 @@ function myFunction() {
 <a href="#Measurable function">Measurable function</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Problem set 7">Problem set 7</a>
+<a href="#Problem set 6">Problem set 6</a>
 </li>
 <li>
 <a href="#Two technical results">Two technical results</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Problem set 8">Problem set 8</a>
+<a href="#Problem set 7">Problem set 7</a>
 </li>
 <li>
 <a href="#Additivity">Additivity</a>
 </li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Problem set 8">Problem set 8</a>
+</li>
 <li>
 <a href="#Monotone convergence theorem (MCT)">Monotone convergence theorem (MCT)</a>
 </li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Problem set 9">Problem set 9</a>
+</li>
 <li>
 <a href="#Fatou and DCT">Fatou and DCT</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Problem set 10">Problem set 10</a>
 </li>
 <li>
 <a href="#Radon-Nikodym theorem">Radon-Nikodym theorem</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Problem set 9">Problem set 9</a>
+<a href="#Problem set 11">Problem set 11</a>
 </li>
 </ul>
 <hr/>
@@ -697,7 +706,7 @@ $$\forall B\in\calB~~X^{-1}(B)\in\calF.$$
 <p></p>
 
 <h2><a
-name="Problem set 7">Problem set 7</a></h2>
+name="Problem set 6">Problem set 6</a></h2>
 
 <p>
 <b>EXERCISE 22:</b>&nbsp;Characterise measurable functions from $({\mathbb R},\calP({\mathbb R}))$  to $({\mathbb R},\{\phi,{\mathbb R}\}).$ 
@@ -832,7 +841,7 @@ Since $\delta&gt;0$  is arbitrary, we have $\lim \int s_n \geq \int z.$
 </p>
 
 <h2><a
-name="Problem set 8">Problem set 8</a></h2>
+name="Problem set 7">Problem set 7</a></h2>
 
 <p>
 <b>EXERCISE 24:</b>&nbsp;
@@ -872,6 +881,9 @@ Then we show that for $a&gt;0$  we have $E(aX) = E(X).$  This proof also proceed
 <p></p>
 Finally, we show $E(-X)= -E(X).$  Let $Y = -X.$  Then $Y_+ = X_-$  and $Y_- = X_+.$  So $E(Y) = E(Y_+)-E(Y_-) = E(X_-)-E(X_+) = -E(X).$
 <p></p>
+
+<h2><a
+name="Problem set 8">Problem set 8</a></h2>
 
 <h1><a
 name="Monotone convergence theorem (MCT)">Monotone convergence theorem (MCT)</a></h1>
@@ -950,6 +962,9 @@ In the simple version we assumed that the limit of $(X_n)$  is a random variable
  assumptions. We may allow $(X_n(\omega))$  to diverge. Then the limit $X(\omega)$  is a function from $\Omega$ 
  to $[0,\infty].$  One can then <i>show</i>  (not <i>assume</i>) that this $X$  is a random variable. We do this
  below.
+<h2><a
+name="Problem set 9">Problem set 9</a></h2>
+
 <h1><a
 name="Fatou and DCT">Fatou and DCT</a></h1>
 
@@ -1006,6 +1021,9 @@ Hence $E|X_n-X|\rightarrow 0,$  as required.
 <b><i>[QED]</i></b>
 </p>
 
+<h2><a
+name="Problem set 10">Problem set 10</a></h2>
+
 <h1><a
 name="Radon-Nikodym theorem">Radon-Nikodym theorem</a></h1>
 
@@ -1030,7 +1048,7 @@ We have used a special case of this theorem, where $\nu$  is a probability measu
 <p></p>
 
 <h2><a
-name="Problem set 9">Problem set 9</a></h2>
+name="Problem set 11">Problem set 11</a></h2>
 
 <p></p>
 <hr/>
