--- a/prob2_2025/cjoint.html
+++ b/prob2_2025/cjoint.html
@@ -1811,7 +1811,7 @@ As in the discrete case, here also  we have  concepts of
 
 <fieldset>
 <legend><b>Definition: </b></legend>
-If $(X,Y)$  has a joint density $f(x,y),$ then $E(X|Y=y) = \int_{-\infty}^\infty f_{X|Y}(x,y)\, dx$  and 
+If $(X,Y)$  has a joint density $f(x,y),$ then $E(X|Y=y) = \int_{-\infty}^\infty x\,f_{X|Y}(x,y)\, dx$  and 
 $$V(X|Y=y) = E((X-E(X|Y=y))^2|Y=y).$$
 </fieldset> 
 The tower property also works as before, as do the relation between conditional and unconditional variances:
