--- a/prob2_2025/cjoint.html
+++ b/prob2_2025/cjoint.html
@@ -1736,7 +1736,7 @@ name="Conditional density (intuition)">Conditional density (intuition)</a></h1>
 <p></p>
 So far distributions with densities  behave very similarly to the discrete distributions, with integration replacing summation.  
 But we cannot follow the same path for conditional distribution. If $(X,Y)$  are jointly discrete then we defined the
- conditional PMF of $X$  given $Y=y$  as $x\mapsto P(X=x|Y=y) = \frac{P(x=x,Y=y)}{P(Y=y)},$  
+ conditional PMF of $X$  given $Y=y$  as $x\mapsto P(X=x|Y=y) = \frac{P(X=x,Y=y)}{P(Y=y)},$  
 and we did this only  for those $y$ for which $P(Y=y)&gt;0.$
 <p></p>
 But if $(X,Y)$  has a joint density, then $P(Y=y)$  is always 0. So we employ a little trick. For a discrete random variable
@@ -1990,7 +1990,12 @@ name="Miscellaneous problems">Miscellaneous problems</a></h1>
 ::<p>
 <b>EXERCISE 69:</b>&nbsp;<font size="-2">[hpsjoint10.png]</font><img width="" src="image/hpsjoint10.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 70:</b>&nbsp;<font size="-2">[hpsjoint11.png]</font><img width="" src="image/hpsjoint11.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 70:</b>&nbsp;<font size="-2">[hpsjoint11.png]</font><img width="" src="image/hpsjoint11.png" style="vertical-align:text-top;">
+<p></p>
+Here $X_i = U_{(i)}$  in our notation, and  $R=U_{(n)}-U_{(1)}$  is the range of the $U_i$'s.
+<p></p>
+I think this problem should better be attacked after learning about order statistics <a href="trans.html">in the next chapter</a>.
+</p>
 ::<p>
 <b>EXERCISE 71:</b>&nbsp;<font size="-2">[rossipmjoint1.png]</font><img width="" src="image/rossipmjoint1.png" style="vertical-align:text-top;"></p>
 ::<p>
